--- a/src/pages/embed.html
+++ b/src/pages/embed.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Embed View | Send to Telegram</title>
+    <title>Embed View | Send to Feishu</title>
     <link rel="stylesheet" href="./../assets/css/embed.css">
 </head>
 <body class="container">
@@ -21,20 +21,20 @@
             </a>
         </div>
         <div class="column-item">
-            <a id="wipe-data" target="_blank" href="https://github.com/ridvan/send-to-telegram" aria-label="Options to wipe local user data of the extension">
-                <img src="./../assets/icons/phospor-icons/broom-duotone-ph.svg" height="25" width="25" alt="Github icon">
+            <a id="wipe-data" target="_blank" href="#" aria-label="Options to wipe local user data of the extension">
+                <img src="./../assets/icons/phospor-icons/broom-duotone-ph.svg" height="25" width="25" alt="Broom icon">
                 <span>Wipe Data</span>
             </a>
         </div>
         <div class="column-item column-separator"></div>
         <div class="column-item">
-            <a target="_blank" href="https://t.me/send_to_telegram" aria-label="Extension community channel on Telegram">
+            <a target="_blank" href="https://www.feishu.cn/hc/en-US/articles/360024984973-Install-Feishu" aria-label="Feishu installation guide">
                 <img src="./../assets/icons/phospor-icons/megaphone-simple-duotone-ph.svg" height="25" width="25" alt="Megaphone icon">
-                <span>Channel</span>
+                <span>Install Feishu</span>
             </a>
         </div>
         <div class="column-item">
-            <a target="_blank" href="https://github.com/ridvan/send-to-telegram" aria-label="Github page of Send to Telegram Project">
+            <a target="_blank" href="https://github.com/windyskr/send-to-feishu" aria-label="Send to Feishu Project">
                 <img src="./../assets/icons/phospor-icons/github-logo-duotone-ph.svg" height="25" width="25" alt="Github icon">
                 <span>GitHub</span>
             </a>
