--- a/src/pages/home.html
+++ b/src/pages/home.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homepage | Send to Telegram</title>
+    <title>Homepage | Send to Feishu</title>
     <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 <body>
 <header role="banner">
-    <h1><span class="logo-small"></span> <span>Send to Telegram</span></h1>
+    <h1><span class="logo-small"></span> <span>Send to Feishu</span></h1>
 </header>
 <main role="main">
     <div class="main-header">
@@ -17,7 +17,7 @@
             <span class="dot gray-dot blink-one"></span>
             <span class="dot gray-dot blink-two"></span>
             <span class="dot gray-dot blink-three"></span>
-            <span class="visually-hidden">Telegram Bot API, Connection Status:</span>
+            <span class="visually-hidden">Feishu API, Connection Status:</span>
             <span id="connection-message"> Trying to connect</span>
         </p>
         <template id="open-embed-view-template">
